# codelane

./: .gitignore  Agents.md  BUILD.md  COMMERCIAL_LICENSE.md  Cargo.toml  IMPLEMENTATION_LANE_MANAGEMENT.md  Makefile  NOTES.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_QUICK_START.md  Procfile  README.md  TAURI_BEST_PRACTICES.md  TESTING_LANE_MANAGEMENT.md  UI_REDESIGN.md  claude.md  features.md  mprocs.yaml  package-lock.json  package.json  tech-architecture.md
.cargo/: config.toml
assets/: main.css
assets/js/: monaco-bridge.js  monaco-loader.js
assets/themes/: codelane-dark.json
crates/codelane-benchmarks/: Cargo.toml  README.md
crates/codelane-benchmarks/benches/: file_operations.rs  git_benchmarks.rs  ipc_benchmarks.rs  terminal_benchmarks.rs
crates/codelane-core/: Cargo.toml
crates/codelane-core/src/: config.rs  error.rs  hooks.rs  id.rs  lane.rs  lib.rs  paths.rs  project.rs
crates/codelane-editor/: Cargo.toml
crates/codelane-editor/src/: bridge.rs  commands.rs  lib.rs  monaco.rs
crates/codelane-git/: Cargo.toml
crates/codelane-git/src/: diff.rs  error.rs  lib.rs  repository.rs  status.rs
crates/codelane-lsp/: Cargo.toml
crates/codelane-lsp/src/: client.rs  diagnostics.rs  error.rs  lib.rs  manager.rs
crates/codelane-plugin/: Cargo.toml
crates/codelane-plugin/src/: api.rs  error.rs  host.rs  lib.rs  manifest.rs
crates/codelane-review/: Cargo.toml
crates/codelane-review/src/: checklist.rs  comment.rs  error.rs  lib.rs  review.rs
crates/codelane-terminal/: Cargo.toml
crates/codelane-terminal/src/: error.rs  event.rs  lib.rs  pty.rs  renderer.rs  term.rs
crates/codelane-ui/: Cargo.toml
crates/codelane-ui/src/: lib.rs  theme.rs
crates/codelane-ui/src/components/: command_palette.rs  diff_view.rs  editor_view.rs  lane_list.rs  mod.rs  pane.rs  review_panel.rs  sidebar.rs  status_bar.rs  terminal_view.rs
crates/codelane-ui/src/hooks/: mod.rs  use_git.rs  use_monaco.rs  use_terminal.rs
frontend/: .npmrc  KOBALTE.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: tailwind.css
frontend/src/: App.test.tsx  App.tsx  THEME.md  index.css  index.tsx  theme.ts
frontend/src/components/: AboutDialog.tsx  AgentSelector.tsx  BottomPanel.tsx  CreateLaneDialog.tsx  GitStatus.tsx  LaneList.tsx  ProcessMonitor.tsx  SettingsDialog.tsx  TerminalView.tsx  WorktreeConflictDialog.tsx
frontend/src/components/__tests__/: AboutDialog.test.tsx  LaneList.test.tsx
frontend/src/components/dev/: PerformanceMonitor.tsx
frontend/src/components/editor/: DiffViewer.tsx  EditorPanel.tsx  EditorTabs.tsx  ExternalChangeModal.tsx  FileIcon.tsx  FileViewer.tsx  UnsavedChangesModal.tsx  index.ts  types.ts
frontend/src/components/explorer/: ChangesView.tsx  FileExplorer.tsx  FileIcon.tsx  FileTree.tsx  index.ts  types.ts
frontend/src/components/git/: CommitDialog.tsx  FileChangeItem.tsx  index.ts
frontend/src/components/hooks/: HookOnboardingModal.tsx
frontend/src/components/icons/: GitPullRequestCreateArrowIcon.tsx
frontend/src/components/lanes/: CreateLaneDialog.tsx  index.ts
frontend/src/components/layout/: ActivityBar.tsx  AgentTerminalPanel.tsx  BottomPanel.tsx  CodeReviewChanges.tsx  CodeReviewChat.tsx  EditorPlaceholder.tsx  MainLayout.tsx  ProjectPanel.tsx  ResizeHandle.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  WelcomeScreen.tsx  index.ts
frontend/src/components/onboarding/: OnboardingWizard.tsx  index.ts
frontend/src/components/review/: CodeReviewAgentPanel.tsx  CodeReviewFileList.tsx  CodeReviewLayout.tsx  CodeReviewSidebar.tsx  FileContextPanel.tsx  ReviewChangesPanel.tsx  ReviewFileScrollView.tsx  ReviewSummaryPanel.tsx  index.ts
frontend/src/components/search/: SearchPanel.tsx
frontend/src/components/settings/: AgentsSettings.tsx  ApiKeysSettings.tsx  AppearanceSettings.tsx  CodeReviewSettings.tsx  GeneralSettings.tsx  ModelsSettings.tsx  NotificationSettings.tsx  SettingsDialog.tsx  SettingsNavIcon.tsx  index.ts  types.ts
frontend/src/components/tabs/: TabBar.tsx  TabContent.tsx  TabPanel.tsx
frontend/src/components/terminal/: TerminalContainer.tsx  TerminalInstance.tsx
frontend/src/components/tutorials/: TutorialDialog.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Dialog.tsx  TextField.tsx  index.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useActiveTab.ts  useCodeReviewTerminal.ts  useGitChanges.ts  useGitService.ts  useGitWatcher.ts  useLazyDiff.ts  useResizable.ts  useReviewKeyboardShortcuts.ts  useTabManager.ts  useTerminalPool.ts
frontend/src/lib/: db.ts  git-api.ts  lane-api.ts  platform.ts  settings-api.ts  storage.ts  terminal-utils.ts
frontend/src/lib/markdown/: MarkdownRenderer.tsx
frontend/src/services/: AIReviewService.ts  AgentNotificationService.ts  AgentStatusManager.ts  CodeReviewSettingsManager.ts  CodeReviewStore.ts  EditorSettingsManager.ts  EditorStateManager.ts  FileWatchService.ts  GitWatcherService.ts  HookService.ts  KeyboardShortcutManager.ts  PortablePty.ts  ResourceManager.ts  SearchStateManager.ts  TabManager.ts  TabStorage.ts  TerminalPool.ts  ThemeManager.ts
frontend/src/services/__tests__/: AgentNotificationService.test.ts  AgentStatusManager.test.ts  FileWatchService.test.ts  GitWatcherService.test.ts  (+5 more)
frontend/src/store/: README.md  index.ts
frontend/src/test-utils/: setup.ts  solid-mock.ts  tauri-mock.ts
frontend/src/tests/: performance.test.ts
frontend/src/types/: agent.ts  agentStatus.ts  git.ts  hooks.ts  lane.ts  terminal.ts
frontend/src/utils/: changesetChecksum.ts  debounce.ts  diffTruncation.ts  fileFilters.ts  performance.ts
scripts/: perf-report.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/migrations/: 000_migrations_table.sql  001_initial_schema.sql
src-tauri/src/: ai.rs  db.rs  dependency_graph.rs  file_sorter.rs  fs.rs  git.rs  hook_monitor.rs  hooks.rs  import_analyzer.rs  lane.rs  lib.rs  main.rs  migrations.rs  paths.rs  process.rs  search.rs  settings.rs  terminal.rs
(+61 files in other folders)
