[workspace]
resolver = "2"
members = [
    "crates/codelane-core",
    "crates/codelane-terminal",
    "crates/codelane-git",
    "crates/codelane-lsp",
    "crates/codelane-benchmarks",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/codelane/codelane"
rust-version = "1.75"

[workspace.dependencies]

# Terminal
alacritty_terminal = "0.24"
portable-pty = "0.8"

# Git
gix = { version = "0.68", default-features = false, features = ["basic", "blob-diff"] }

# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# Async
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
directories = "5.0"
notify = "7.0"

# Plugin system
wasmtime = "27"
wit-bindgen = "0.36"

# Internal crates
codelane-core = { path = "crates/codelane-core" }
codelane-terminal = { path = "crates/codelane-terminal" }
codelane-editor = { path = "crates/codelane-editor" }
codelane-git = { path = "crates/codelane-git" }
codelane-ui = { path = "crates/codelane-ui" }
codelane-lsp = { path = "crates/codelane-lsp" }
codelane-review = { path = "crates/codelane-review" }
codelane-plugin = { path = "crates/codelane-plugin" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
