[package]
name = "codelane-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Codelane - AI orchestrator for local development (Tauri shell)"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "^2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "^2.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "^2.0"
tauri-plugin-fs = "^2.0"
tauri-plugin-dialog = "^2.0"
tauri-plugin-process = "^2.0"
tauri-plugin-clipboard-manager = "^2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PTY handling
portable-pty = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
dirs = "5.0"

# Internal crates (for Tauri commands)
codelane-terminal = { path = "../crates/codelane-terminal" }
codelane-git = { path = "../crates/codelane-git" }
codelane-core = { path = "../crates/codelane-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "^2.0"

[lib]
name = "codelane_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
