[package]
name = "codelane-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Internal crates
codelane-core = { path = "../codelane-core" }
codelane-terminal = { path = "../codelane-terminal" }
codelane-git = { path = "../codelane-git" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.42", features = ["full"] }
serde_json = "1.0"

# Test utilities
tempfile = "3.14"
rand = "0.8"
walkdir = "2.5"
ignore = "0.4"

[[bench]]
name = "terminal_benchmarks"
harness = false

[[bench]]
name = "git_benchmarks"
harness = false

[[bench]]
name = "ipc_benchmarks"
harness = false

[[bench]]
name = "file_operations"
harness = false
