[package]
name = "codelane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for Codelane"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
parking_lot.workspace = true
tracing.workspace = true
