[package]
name = "codelane-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Monaco editor integration for Codelane"

[dependencies]
codelane-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
