[package]
name = "codelane-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP client for Codelane"

[dependencies]
codelane-core.workspace = true

tower-lsp.workspace = true
lsp-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
