[package]
name = "codelane-review"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code review engine for Codelane"

[dependencies]
codelane-core.workspace = true
codelane-git.workspace = true

chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
