[package]
name = "codelane-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dioxus UI components for Codelane"

[dependencies]
codelane-core.workspace = true
codelane-terminal.workspace = true
codelane-editor.workspace = true
codelane-git.workspace = true

dioxus.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
